<resources>
    <string name="app_name" translatable="false">SkyNews</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="clouds">Clouds</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="alert">Alert</string>
    <string name="language">Language</string>
    <string name="location">Location</string>
    <string name="units">Temp Units</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="save_location">Save Location</string>
    <string name="k">Kelvin</string>
    <string name="c">Celeicous</string>
    <string name="f">Fehrnahit</string>
    <string name="gps" translatable="false">GPS</string>
    <string name="map" translatable="false">Map</string>
    <string name="meter_sec">meter/sec</string>
    <string name="miles_hour">miles/hour</string>
    <string name="english" translatable="false">English</string>
    <string name="arabic" translatable="false">العربيه</string>
    <string name="get_weather">Get Weather</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
    <string name="stop">Stop</string>
    <string name="save_alarm">Save Alarm</string>
    <string name="ok" translatable="false">Ok</string>
</resources>