<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/primary_continer"
    app:layoutDescription="@xml/activity_main_scene">

    <fragment

        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/nav_host_fragment"
        app:navGraph="@navigation/nav_graph"
        />
    
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="centerInside"
        android:elevation="@dimen/_4sdp"
        android:src="@drawable/ic_menu"
        android:background="@drawable/rounded_hom"
        android:id="@+id/iv_menu"/>

    <TextView
        android:id="@+id/tv_home"
        android:text="@string/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_home"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/motion_option"/>
    <TextView
        android:id="@+id/tv_fav"
        android:text="@string/favourite"
        style="@style/motion_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:drawableStartCompat="@drawable/ic_favorite" />
    <TextView
        android:id="@+id/tv_settings"
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_settings"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/motion_option"/>
    <TextView
        android:id="@+id/tv_alert"
        android:text="@string/alert"
        style="@style/motion_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:drawableStartCompat="@drawable/ic_alert" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/f1_option"
        android:orientation="vertical"
        android:visibility="gone"
        app:constraint_referenced_ids="tv_home,tv_fav,tv_alert,tv_settings"/>






</androidx.constraintlayout.motion.widget.MotionLayout>