<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#625D8B"
    tools:context=".home.view.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/East_Bay">

        <TextView
            android:id="@+id/tv_temp_home_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:layout_marginTop="24dp"
            android:text="27"
            android:textColor="@color/white"
            android:textSize="@dimen/_40ssp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/icon_home_fragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_weather_description_home_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Fair"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="@+id/tv_temp_home_fragment"
            app:layout_constraintStart_toStartOf="@+id/tv_temp_home_fragment"
            app:layout_constraintTop_toBottomOf="@id/tv_temp_home_fragment" />

        <TextView
            android:id="@+id/tv_city_home_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="New Cairo"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/tv_weather_description_home_fragment"
            app:layout_constraintTop_toBottomOf="@id/tv_weather_description_home_fragment" />

        <TextView
            android:id="@+id/tv_weather_date_home_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="1/1/1111"
            android:textColor="@color/Mystic"
            app:layout_constraintEnd_toEndOf="@+id/tv_temp_home_fragment"
            app:layout_constraintStart_toStartOf="@+id/tv_temp_home_fragment"
            app:layout_constraintTop_toBottomOf="@id/tv_city_home_fragment" />

        <TextView
            android:id="@+id/tv_weather_time_home_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="28:25"
            android:textColor="@color/Mystic"
            app:layout_constraintEnd_toEndOf="@+id/tv_temp_home_fragment"
            app:layout_constraintStart_toStartOf="@+id/tv_temp_home_fragment"
            app:layout_constraintTop_toBottomOf="@id/tv_weather_date_home_fragment" />

        <ImageView
            android:id="@+id/icon_home_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_home"
            app:layout_constraintBottom_toBottomOf="@+id/tv_weather_time_home_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="#50517F"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_weather_time_home_fragment">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_hourly_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#50517F"
                tools:listitem="@layout/hourly_temp_layout"
                 />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="#50517F"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/card1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_weak_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#50517F"
                tools:listitem="@layout/week_temp_layout"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@color/East_Bay"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_10sdp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card2"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/East_Bay"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_humidity_home_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home" />

                <TextView
                    android:id="@+id/tv_humidity_home_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp" />

                <TextView
                    android:id="@+id/tv_humidity_value_home_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/_7sdp"
                    android:text="11km\h"
                    android:textColor="@color/Mystic" />


            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/card2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/East_Bay"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_wind_home_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home" />

                <TextView
                    android:id="@+id/tv_wind_home_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp" />

                <TextView
                    android:id="@+id/tv_wind_value_home_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/_7sdp"
                    android:text="51%"
                    android:textColor="@color/Mystic" />


            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_10sdp"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/East_Bay"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_pressure_home_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home" />

                <TextView
                    android:id="@+id/tv_pressure_home_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp" />

                <TextView
                    android:id="@+id/tv_pressure_value_home_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/_7sdp"
                    android:text="11km\h"
                    android:textColor="@color/Mystic" />


            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/card3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/East_Bay"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_clouds_home_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home" />

                <TextView
                    android:id="@+id/tv_clouds_home_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clouds"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp" />

                <TextView
                    android:id="@+id/tv_clouds_value_home_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/_7sdp"
                    android:text="11km\h"
                    android:textColor="@color/Mystic" />


            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>