<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".setting.view.SettingsFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/units"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/_30sdp"
        android:textSize="@dimen/_18ssp"
        android:layout_marginTop="@dimen/_10sdp"/>
    <com.google.android.material.card.MaterialCardView
        style="@style/card_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp">

            <TextView
                android:id="@+id/tv_kelvin_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="K"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/_10sdp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_kelvin_settings"
                android:layout_margin="@dimen/_10sdp"
                android:id="@+id/view1"/>
            <TextView
                android:id="@+id/tv_celisous_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view1"
                android:layout_marginStart="@dimen/_10sdp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_celisous_settings"
                android:layout_margin="@dimen/_10sdp"
                android:id="@+id/view2"/>

            <TextView
                android:id="@+id/tv_fehrnait_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="F"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view2" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >
                <RadioButton
                    android:id="@+id/radio_kelvin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/radio_celisous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/radio_fehraniet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RadioGroup>






        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/_30sdp"
        android:textSize="@dimen/_18ssp"
        android:layout_marginTop="@dimen/_10sdp"/>
    <com.google.android.material.card.MaterialCardView
        style="@style/card_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp">

            <TextView
                android:id="@+id/tv_gps_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GPS"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/_10sdp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_gps_settings"
                android:layout_margin="@dimen/_10sdp"
                android:id="@+id/view4"/>

            <TextView
                android:id="@+id/tv_Map_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="Map"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view4" />



            <RadioGroup

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >
                <RadioButton
                    android:id="@+id/radio_gps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/radio_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wind_speed"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/_30sdp"
        android:textSize="@dimen/_18ssp"
        android:layout_marginTop="@dimen/_10sdp"/>
    <com.google.android.material.card.MaterialCardView
        style="@style/card_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp">

            <TextView
                android:id="@+id/tv_meter_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="meter/sec"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/_10sdp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_meter_settings"
                android:layout_margin="@dimen/_10sdp"
                android:id="@+id/view7"/>

            <TextView
                android:id="@+id/tv_mile_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="miles/hour"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view7" />



            <RadioGroup
                android:id="@+id/radio_group_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >
                <RadioButton
                    android:id="@+id/radio_meter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/radio_miles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/_30sdp"
        android:textSize="@dimen/_18ssp"
        android:layout_marginTop="@dimen/_10sdp"/>
    <com.google.android.material.card.MaterialCardView
        style="@style/card_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            >

            <TextView
                android:id="@+id/tv_english_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="English"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/_10sdp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_english_settings"
                android:layout_margin="@dimen/_10sdp"
                android:id="@+id/view6"/>

            <TextView
                android:id="@+id/tv_arabic_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="العربيه"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view6" />



            <RadioGroup
                android:id="@+id/radio_group_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >
                <RadioButton
                    android:id="@+id/radio_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/radio_arabic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>



</LinearLayout>
</ScrollView>